# vectortiles

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  default.nix  gaia-vector-tiles.cabal  gaia-vectortile.cabal  package.yaml  release.nix  stack.yaml  vectortiles.cabal
Data/: VectorTile.hs
Gaia/: VectorTile.hs
Gaia/VectorTile/: Raw.hs
Geography/: VectorTile.hs
Geography/VectorTile/: Geometry.hs  Protobuf.hs  Raw.hs  Util.hs  VectorTile.hs
Geography/VectorTile/Protobuf/: Internal.hs
bench/: Bench.hs  pybench.py  results.txt
demo/: Demo.hs  vectortiles-demo.cabal
lib/Geography/: VectorTile.hs
lib/Geography/VectorTile/: Geometry.hs  Internal.hs  Protobuf.hs  Util.hs  VectorTile.hs
lib/Geography/VectorTile/Protobuf/: Internal.hs
lib/Geography/VectorTile/Protobuf/Internal/: Vector_tile.hs
lib/Geography/VectorTile/Protobuf/Internal/Vector_tile/: Tile.hs
lib/Geography/VectorTile/Protobuf/Internal/Vector_tile/Tile/: Feature.hs  GeomType.hs  Layer.hs  Value.hs
test/: Test.hs  clearlake.mvt  polygon.mvt
