name:                vectortiles-demo
version:             1.0.0.2
synopsis:            A demo for the vectortiles library.
description:         A demo for the vectortiles library.
homepage:            https://github.com/fosskers/vectortiles
author:              Colin Woodbury
maintainer:          cwoodbury@azavea.com
category:            Geography
build-type:          Simple

extra-source-files:  roads.mvt

cabal-version:       >=1.10

library
  exposed-modules:     Demo

  build-depends:       base >=4.9 && <4.11
                     , bytestring
                     , containers
                     , directory
                     , microlens >= 0.4 && < 0.5
                     , microlens-platform >= 0.3 && < 0.4
                     , pretty-simple >= 2.0 && < 2.1
                     , text
                     , vector
                     , vectortiles

  default-language:    Haskell2010

  ghc-options: -fwarn-unused-imports -fwarn-unused-binds
